Method name change

--- a/HelloTorontoAPI/appsettings.json
+++ b/HelloTorontoAPI/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"helloTorontoContext": "Data Source=SQL5063.site4now.net;Initial Catalog=db_a7e8dd_hellotoronto;User Id=db_a7e8dd_hellotoronto_admin;Password=HTO20201220!"
+    "helloTorontoContext": "Data Source=SQL5063.site4now.net;Initial Catalog=db_a7e8dd_hellotoronto;User Id=db_a7e8dd_hellotoronto_admin;Password=HTO20201220!"
 
-    "helloTorontoContext": "Server=localhost\\sqlexpress;Database=db_a7e8dd_hellotoronto;Trusted_Connection=True"
+    //"helloTorontoContext": "Server=localhost\\sqlexpress;Database=db_a7e8dd_hellotoronto;Trusted_Connection=True"
 
   }
 }
